added HTML head and header/nav bar elements. Created banner

--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
 
 <head>
-<!-- TODO: add head content below -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!-- TODO: add body content below -->
+    <header>
+        <h1>Mekenna Baker</h1>
+        <nav>
+            <a href="#About-Me">About Me</a>
+             
+            <a href="#Work">Work</a>
+            
+            <a href="#Contact-Me">Contact Me</a>    
+        </nav>
+
+    </header>
+    <main>
+        <div class="hero-banner">
+        <div>
+            <h2>Portfolio</h2>
+        </div>
+        </div>
+    </main>
 
 </body>
 
