created about me, and work sections. Added 2/5 projects to work section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
             <h2>Portfolio</h2>
         </div>
         </div>
+
+        <div class="page-wrapper">
+            <section class="page-section">
+                <h2 id="About-Me">About</h2>
+                <div>
+                    <p>I am a 27 y/o female, with an extensive background in customer support/expierence. When I had my son, I became a stay at home mom, while my spouse continued working. I soon decided that I needed to get out of the house, and do something for me. I took an 8 week intro to web devolpment course. I took to it, and ended up continuing my education in that direction.</p>
+                </div>
+            </section>
+
+            <section class="page-section">
+                <h2 id="Work">Work</h2>
+                <div class="flex-container">
+
+                    <a class="flex-item project1" href="https://mekenna-baker.github.io/project_mini/">
+                        <div>
+                            <h3>Survey Form</h3>
+                            <h4>HTML/CSS</h4>
+                        </div>
+                    </a>
+
+                    <a class="flex-item project2" href="https://www.freecodecamp.org/learn/2022/responsive-web-design/#build-a-tribute-page-project">
+                        <div>
+                            <h3>Cat painting</h3>
+                            <h4>CSS</h4>
+                        </div>
+                    </a>
     </main>
 
 </body>
