finished adding projects to work section. Created contact section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,47 @@
                             <h4>CSS</h4>
                         </div>
                     </a>
+                    <a class="flex-item project3" href="https://mekenna-baker.github.io/product-landing/#about">
+                        <div>
+                            <h3>Product Landing</h3>
+                            <h4>HTML / CSS</h4>
+                        </div>
+                    </a>
+
+                    <a class="flex-item project4" href="https://github.com/Mekenna-Baker">
+                        <div>
+                            <h3>Project 4</h3>
+                            <h4>HTML/CSS</h4>
+                        </div>
+                    </a>
+
+                    <a class="flex-item project5" href="https://github.com/Mekenna-Baker">
+                        <div>
+                            <h3>Project 5</h3>
+                            <h4>HTML/CSS</h4>
+                        </div>
+                    </a>
+                </div>
+            </section>
+
+            <section class="page-section contact">
+                <h2 id="Contact-Me">Contact Me</h2>
+                <div>
+                    <address>
+                        <a href="https://www.linkedin.com/in/mekenna--baker/">Linkedin</a>
+
+                        <a href="https://www.facebook.com/mekenna.drabner.04/">Facebook</a>
+
+                        <a href="mailto:mekenna.drabner@gmail.com">Email</a>
+                    </address>
+                    
+                </div>
+            </section>
+
+        </div>
+
+
+
     </main>
 
 </body>
