--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <h2>Portfolio</h2>
         </div>
         </div>
-
+        
         <div class="page-wrapper">
             <section class="page-section">
                 <h2 id="About-Me">About</h2>
@@ -52,6 +52,7 @@
                             <h4>CSS</h4>
                         </div>
                     </a>
+
                     <a class="flex-item project3" href="https://mekenna-baker.github.io/product-landing/#about">
                         <div>
                             <h3>Product Landing</h3>
@@ -85,13 +86,10 @@
 
                         <a href="mailto:mekenna.drabner@gmail.com">Email</a>
                     </address>
-                    
                 </div>
             </section>
 
         </div>
-
-
 
     </main>
 
